--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width"> 
       <title>BARBERIA FLEXEDWIN</title>
-      <link rel="stylesheet" href="reset/reset.css">
+      <link rel="stylesheet" href="reset.css/reset.css">
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
