--- a/index/index.html
+++ b/index/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width"> 
       <title>BARBERIA FLEXEDWIN</title>
-      <link rel="stylesheet" href="reset.css/reset.css">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="../reset/reset.css">
+      <link rel="stylesheet" href="../style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
@@ -16,15 +16,15 @@
       <header>
         <div class="caja">
 
-          <h1> <img src="imagenes/logo.png" alt="logo de la barberia flex"> </h1>
+          <h1> <img src="../imagenes/logo.png" alt="logo de la barberia flex"> </h1>
 
           <nav>
                         
             <ul>
 
               <li><a href="index.html">Home</a></li>
-              <li><a href="productos barberia.htm">Productos</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="../productos-barberia/productos-barberia.html">Productos</a></li>
+              <li><a href="../contacto/contacto.html">Contacto</a></li>
 
             </ul>
 
