--- a/productos-barberia/productos-barberia.html
+++ b/productos-barberia/productos-barberia.html
@@ -18,7 +18,7 @@
 
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="productos barberia.htm">Productos</a></li>
+                        <li><a href="productos barberia.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
 
