arreglando todos los src y href del index

--- a/index/index.html
+++ b/index/index.html
@@ -33,14 +33,14 @@
         </div>
       </header>
 
-      <img class="banner" src="banner/banner.jpg">
+      <img class="banner" src="../index/imagenes/banner.jpg" alt="banner">
 
       <main>
         <section class="principal">
 
           <h2 class="titulo-principal">Sobre la Barbería Flex</h2>
 
-          <img class="utencilios" src="imagenes/imagenes/utencilios.jpg" alt="utencilios de un barbero">
+          <img class="utencilios" src="../index/imagenes/utencilios.jpg" alt="utencilios de un barbero">
   
           <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Flex</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
     
@@ -75,7 +75,7 @@
               <li class="items">Puntualidad</li>
               <li class="items">Limpieza</li> 
      
-             </ul><img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">
+             </ul><img src="../index/imagenes/diferenciales.jpg" alt="diferenciales" class="imagen-diferenciales">
 
           </div>
 
@@ -89,7 +89,7 @@
       </main>
 
       <footer>
-        <img src="imagenes/imagenes/logo-blanco.png" alt="logo de la barberia flex">
+        <img src="../imagenes/logo-blanco.png" alt="logo de la barberia flex">
         <p class="Copyright">&copy Copyright Flex Edwin 2023</p>
       </footer>
 
