--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -5,8 +5,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Contacto FLEX</title>
-        <link rel="stylesheet" href="reset.css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../reset/reset.css">
+        <link rel="stylesheet" href="../style.css">
         
     </head>
 
@@ -14,13 +14,13 @@
         <header>
             <div class="caja">
 
-                <h1> <img src="imagenes/imagenes/logo.png" alt="logo de la barberia flex"> </h1>
+                <h1> <img src="../imagenes/logo.png" alt="logo de la barberia flex"> </h1>
                 <nav>
 
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="productos barberia.htm">Productos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="../index/index.html">Home</a></li>
+                        <li><a href="/productos-barberia/productos-barberia.html">Productos</a></li>
+                        <li><a href="/contacto/contacto.html">Contacto</a></li>
                     </ul>
 
                 </nav>
@@ -108,7 +108,7 @@
         </main>
 
         <footer>
-            <img src="imagenes/imagenes/logo-blanco.png" alt="logo de la barberia flex">
+            <img src="/imagenes/logo-blanco.png" alt="logo de la barberia flex">
             <p class="Copyright">&copy Copyright Flex Edwin 2023</p>
         </footer>
 
