arreglando le logo del footer

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -108,7 +108,7 @@
         </main>
 
         <footer>
-            <img src="/imagenes/logo-blanco.png" alt="logo de la barberia flex">
+            <img src="../imagenes/logo-blanco.png" alt="logo de la barberia flex">
             <p class="Copyright">&copy Copyright Flex Edwin 2023</p>
         </footer>
 
