--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -19,8 +19,8 @@
 
                     <ul>
                         <li><a href="../index/index.html">Home</a></li>
-                        <li><a href="/productos-barberia/productos-barberia.html">Productos</a></li>
-                        <li><a href="/contacto/contacto.html">Contacto</a></li>
+                        <li><a href="../productos-barberia/productos-barberia.html">Productos</a></li>
+                        <li><a href="../contacto/contacto.html">Contacto</a></li>
                     </ul>
 
                 </nav>
