--- a/productos-barberia/productos-barberia.html
+++ b/productos-barberia/productos-barberia.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>PRODUCTOS - BARBERIA FLEX</title>
-        <link rel="stylesheet" href="reset.css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../reset/reset.css">
+        <link rel="stylesheet" href="../style.css">
         
     </head>
 
@@ -13,13 +13,13 @@
         <header>
             <div class="caja">
 
-                <h1> <img src="imagenes/imagenes/logo.png"> </h1>
+                <h1> <img src="../imagenes/logo.png"> </h1>
                 <nav>
 
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="productos barberia.html">Productos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="../index/index.html">Home</a></li>
+                        <li><a href="../productos-barberia/productos-barberia.html">Productos</a></li>
+                        <li><a href="../contacto/contacto.html">Contacto</a></li>
                     </ul>
 
                 </nav>
@@ -35,21 +35,21 @@
             <ul class="productos">
                 <li>
                     <h2>Cabello</h2>
-                    <img src="imagenes/imagenes/cabello.jpg">
+                    <img src="../productos-barberia/imagenes/cabello.jpg">
                     <p class="producto_descripcion">Con tijera o maquina, a gusto del cliente</p>
                     <p class="producto_precio">$ 12.000</p>
                 </li>
 
                 <li>
                     <h2>Barba</h2>
-                    <img src="imagenes/imagenes/barba.jpg">
+                    <img src="../productos-barberia/imagenes/barba.jpg">
                     <p class="producto_descripcion">Corte y diseño profesional de barba</p>
                     <p class="producto_precio">$ 7.000</p>
                 </li>
 
                 <li>
                     <h2>Cabello + Barba</h2>
-                    <img src="imagenes/imagenes/cabello+barba.jpg">
+                    <img src="../productos-barberia/imagenes/cabello+barba.jpg">
                     <p class="producto_descripcion">Paquete completo de cabello y barba</p>
                     <p class="producto_precio">$ 16.000</p>
                 </li>
@@ -57,7 +57,7 @@
         </main>
 
         <footer>
-            <img src="imagenes/imagenes/logo-blanco.png">
+            <img src="../imagenes/logo-blanco.png">
             <p class="Copyright">&copy Copyright Flex Edwin 2023</p>
         </footer>
 
